# ompi

ompi/mca/coll/libnbc/: coll_libnbc.h  coll_libnbc_component.c  nbc.c  nbc_iallgather.c  nbc_iallgatherv.c  nbc_iallreduce.c  nbc_ialltoall.c  nbc_iexscan.c  nbc_internal.h  nbc_ireduce.c  nbc_iscan.c
ompi/mca/coll/scops/: Makefile.am  coll_scops.c  coll_scops.h  coll_scops_component.c  coll_scops_component.h  coll_scops_ibcast.c  coll_scops_module.c  coll_scops_request.c  coll_scops_request.h  coll_scops_sched.c  coll_scops_sched.h  owner.txt
